Correcciones de templates

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/cambiar_estado_factura.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/cambiar_estado_factura.html
@@ -68,7 +68,7 @@
                                     {{form.condicion_venta}}
                                 </div>
                                 <div class="form-group">
-                                    <br><label for="{{form.total_pagar.name}}"><b>{{form.total_pagar.label}}</b></label></br>
+                                    <br><label for="{{form.total_pagar.name}}"><b>Total pagado</b></label></br>
                                     {{form.total_pagar}}
                                 </div>
                                 <div class="form-group">
