--- a/Proyecto2/SmileSoft/gestion_historial_clinico/templates/listar_historial_clinico.html
+++ b/Proyecto2/SmileSoft/gestion_historial_clinico/templates/listar_historial_clinico.html
@@ -5,11 +5,11 @@
 		<div class="card">
 			<div class="card-body">
 				<center>
-                    <h1 style=" font-family: Lucida Calligraphy;">
-                        <i class="bi bi-file-earmark-medical-fill"></i>
-                        Historial Clinico {{paciente.numero_documento.nombre}} {{paciente.numero_documento.apellido}}
-                        </i>
-                    </h1> 
+                    <h2 style=" font-family: Lucida Calligraphy;">
+                        <b class="bi bi-file-earmark-medical-fill">
+							Historial clinico de {{paciente.numero_documento.nombre}} {{paciente.numero_documento.apellido}}
+						</b>
+                    </h2> 
                 </center>
 		        <br>
 		        <br>
