reportes del estado de citas

--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/listado_citas.html
@@ -101,7 +101,9 @@
                                          <th>Tratamiento Solicitado</th> 
                                         <th>Profesional</th>
                                         <th> Estado </th>
+                                        {%if perms.gestion_agendamiento.add_cita%}
                                         <th colspan="3"> Acciones </th> 
+                                        {%endif%}
                                       
                                         
                                     </tr>
