--- a/Proyecto2/SmileSoft/gestion_cobros/templates/generar_factura.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/generar_factura.html
@@ -70,7 +70,7 @@
                                     <table id="datos_cliente">
                                         <tr>
                                             <th >
-                                                Fecha: <td style="border: 1px solid #dddddd;"> {{factura.fecha}}</td>
+                                                Fecha: <td style="border: 1px solid #dddddd; width:150px;"> <br> {{factura.fecha}}</td>
                                                 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;</td>
                                                 <td>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;</td>                              
                                                 <td>
@@ -83,25 +83,25 @@
                                             <!---->
                                             <tr>
                                                 <th  >
-                                                    Nombre o Razon Social: <td style="border: 1px solid #dddddd;"> {{factura.razon_social}}</td>
+                                                    Nombre o Razon Social: <td style="border: 1px solid #dddddd;"><br> {{factura.razon_social}}</td>
                                                 </th>
                                             </tr>
                                             <!---->
                                             <tr>
                                                 <th >
-                                                    RUC o CI: <td style="border: 1px solid #dddddd;">{{factura.numero_documento}}</td>
+                                                    RUC o CI: <td style="border: 1px solid #dddddd;"><br>{{factura.numero_documento}}</td>
                                                 </th>
                                             </tr>
                                                 <!---->
                                             <tr>
                                                 <th >
-                                                    Direccion: <td style="border: 1px solid #dddddd;"> {{factura.direccion}} </td>
+                                                    Direccion: <td style="border: 1px solid #dddddd;"><br> {{factura.direccion}} </td>
                                                 </th>
                                             </tr>
                                             <!---->
                                             <tr>
                                                 <th >
-                                                    Telefono: <td style="border: 1px solid #dddddd;">{{factura.telefono}}</td>
+                                                    Telefono: <td style="border: 1px solid #dddddd;"><br>{{factura.telefono}}</td>
                                                 </th>
                                             </tr>
                                     </table>
