--- a/Proyecto2/SmileSoft/gestion_reporte/templates/reporte_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_reporte/templates/reporte_tratamiento.html
@@ -110,10 +110,10 @@
                             {%csrf_token%}
                                 <tr>
                                     <td ></td>
-                                    <td >{{search.tratamiento_solicitado}}</td>
+                                    <td >{{search.tratamiento_reporte}}</td>
                                     <td >{{search.fecha}}</td>
                                 </tr>
-                           
+                           {{tratamiento_reporte}}
                         </tbody>
                     </table>
                 </form>
