Continuacion de cierre de caja

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/guardar_datos_apertura_caja.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/guardar_datos_apertura_caja.html
@@ -42,8 +42,8 @@
                     </div>
                     <br>
                     <div class="form-group" style="width: 60%;">
-                        <label ><b>{{form.monto_apertura.label}} (Gs)</b></label>
-                        {{form.saldo_anterior}}
+                        <label ><b>Saldo anterior: </b></label>
+                        {{saldo_anterior}} Gs
                     </div>
                     <br>
                     <div class="form-group" style="width: 60%;">
