--- a/Proyecto2/SmileSoft/gestion_cobros/templates/mostrar_caja.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/mostrar_caja.html
@@ -17,12 +17,12 @@
                     <small> <b> Aun no ha realizado la apertura de caja, <br> ¿Desea realizarla?  </small>
                 </div> -->
             <div class="card-body">
-                <!-- <div class="d-flex justify-content-center">
-                    <a class="btn btn-primary" style="margin: 10px;" href="/cobros/datos_apertura_caja/">
-                        <i class="bi bi-folder2-open"></i>
-                        Abrir Caja
-                    </a>
-                </div> -->
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-primary" style="margin: 10px;" onclick="history.back()">
+                        <i class="bi bi-check2-square"></i>
+                        OK
+                    </button>
+                </div>
             </div>
         </div>
     </div>
