Continuacion de cobranza

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/msj_caja_abierta.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/msj_caja_abierta.html
@@ -18,10 +18,15 @@
                 </div> -->
             <div class="card-body">
                 <div class="d-flex justify-content-center">
-                    <button class="btn btn-primary" style="margin: 10px;" onclick="history.back()">
+                    <a class="btn btn-primary" style="margin: 10px;" href="#">
                         <i class="bi bi-check2-square"></i>
                         OK
-                    </button>
+                    </a>
+
+                    <!-- <button class="btn btn-primary" style="margin: 10px;" onclick="history.back()">
+                        <i class="bi bi-check2-square"></i>
+                        OK
+                    </button> -->
                 </div>
             </div>
         </div>
