--- a/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/msj_caja_cerrada.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/msj_caja_cerrada.html
@@ -18,7 +18,7 @@
                 </div>
             <div class="card-body">
                 <div class="d-flex justify-content-center">
-                    <a class="btn btn-primary" style="margin: 10px;" href="/cobros/datos_apertura_caja/{{numero_documento}}">
+                    <a class="btn btn-primary" style="margin: 10px;" href="/cobros/datos_apertura_caja/{{numero_documento}}/{{id_paciente}}">
                         <i class="bi bi-check2-square"></i>
                         SI
                     </a>
