--- a/Proyecto2/SmileSoft/gestion_cobros/templates/mostrar_tratamientos_cobrar.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/mostrar_tratamientos_cobrar.html
@@ -107,7 +107,7 @@
                         </a>
                         &nbsp;
                             {%if caja_cerrada%}
-                                <a type="submit" href="/cobros/msj_caja_cerrada/{{persona.numero_documento}}" class="btn btn-success btn-block txt-white">
+                                <a type="submit" href="/cobros/msj_caja_cerrada/{{id_paciente}}/{{user.numero_documento}}" class="btn btn-success btn-block txt-white">
                                     <i class="bi bi-check2-square"></i>
                                     Cobrar
                                 </a>
