Inicio de implementacion de Cobrar tratamientos

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/msj_caja_abierta.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/msj_caja_abierta.html
@@ -18,7 +18,7 @@
                 </div> -->
             <div class="card-body">
                 <div class="d-flex justify-content-center">
-                    <a class="btn btn-primary" style="margin: 10px;" href="#">
+                    <a class="btn btn-primary" style="margin: 10px;" href="/cobros/mostrar_tratamientos_cobrar/{{id_paciente}}">
                         <i class="bi bi-check2-square"></i>
                         OK
                     </a>
