Implementacion de cobrar tratamientos

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/confirmacion_de_cobro.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/confirmacion_de_cobro.html
@@ -11,10 +11,10 @@
                     <b>¡Registrado con exito!</b>
                 </h2>
                 <br>
-                <h4>¿Desea generar una factura?</h4>
+                <h4>¿Desea imprimir la factura?</h4>
             </center>
             <center>
-                <a type="submit" class="btn btn-success" href="/cobros/ingresar_datos_factura/{{id_cobro}}">
+                <a type="submit" class="btn btn-success" href="/cobros/generar_factura/{{id_factura}}">
                     <i class="bi bi-check2-square"></i>
                     Si
                 </a>
