add reporte de tratamientos..

--- a/Proyecto2/SmileSoft/gestion_reporte/templates/pdf_reporte_cita.html
+++ b/Proyecto2/SmileSoft/gestion_reporte/templates/pdf_reporte_cita.html
@@ -53,7 +53,7 @@
 
         <p style= "font-size:18px">
     
-                     {{porcentaje |safe}}
+                     {{total_agendado |safe}}
       
         </p>
         <br>
