--- a/Proyecto2/SmileSoft/gestion_reporte/templates/tratamiento_mas_solicitado.html
+++ b/Proyecto2/SmileSoft/gestion_reporte/templates/tratamiento_mas_solicitado.html
@@ -1,146 +1,114 @@
 <!DOCTYPE html>
+<html lang="es">
 
-<html>
+    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--titulo de barra-->
+    <title>Reportes de Tratamientos</title>
+    <link rel="icon" href="favicon.ico" size="32x32" >
+    {% load static %}
+
+    <link rel="stylesheet" href='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.0.1/chart.min.js'>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.8.0/chart.min.js"></script>
+
+    
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Reporte de Tratamiento</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-        {%load static%}
-        {% block head_list %}
-            <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
-            <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-            <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
-            <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
-            <script src="{% static 'lib/daterangepicker/spanish.js' %}"></script>
-
-            <script src="{% static 'js/report.js' %}"></script>
-
-            <script src="{% static 'js/bootstrap.min.js' %}"></script>
-            <!--es para los iconos-->
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  
-            <!-- CSS only -->
-            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-            <!-- JavaScript Bundle with Popper -->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-            
-            <!--Para los Graficos-->
-            <script src="https://code.highcharts.com/highcharts.js"></script>
-
-
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa\9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-            
-        {% endblock %}
+        <center>
+            <a href="/panel_control/inicio/">  
+            <img src="{% static 'img/favicon.png' %}" width="95px" alt="logo">
+           </a>
+        <center>
     </head>
-    <header>
-        <br>
-        <!--Inicio de SESION PANEL-->
-        <nav class="navbar navbar-expand-sm bg-transparent navbar-transparent justify-content-end logo ">
-        <i class="bi bi-person-check-fill "> 
-            <a class="navbar-brand nombre" > 
-            Bienvenido  <FONT COLOR="blue">{{user.usuario}}</FONT>
-            </a>
-        </i>
-            <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
-                <ul class="navbar-nav text-right">
-                    <li class="nav-item active">
-                   
-                    </li>
-                    
-                    <li class="nav-item active">
-                        <a class="cerrar" href="/cerrar_sesion" data-toggle="tooltip" title="Cerrar Sesion"> 
-                        <img src="{% static 'img/apagar.png' %}" width="30px" alt="auto">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-
-        <!--======================================BARRA NAVBAR=======================================================-->
-
-        <center> 
-            <a class="nav-link" class="c-1 d-flex align-items-center" aria-current="page" href=" /panel_control/inicio/"  data-toggle="tooltip" title="Página principal">
-                <FONT COLOR="black" style="font-size: 3.5rem; font-family:Monotype corsiva;" >S m i l e S o f t</FONT>  
-                            <img src="{% static 'img/favicon.png' %}" width="90px" alt="logo">
-                            </a>
-        </center> 
-                          
-                       
-
-       
-    </header>
   
     <body>
-        <div class="container">
-            <center>
-            <h2  style="font-family: Lucida Calligraphy; " class="card-title">
-                <i class="fas fa-chart-bar"></i>
-                {{ title }}
-            </h2>
-            <br>
-            <h3  style="font-family: Lucida Calligraphy; " >
-                <b>Tratamientos más solicitados</b>
-            </h3>
-            </center>
-            <br>
-            <div class="card">
+        {%block content%}
+     
+            <div class="container">
+                <hr>
+                <center>
+            
+                <h2  style="font-family: Lucida Calligraphy; " >
+                    <b>Tratamientos más solicitados</b>
+                </h2>
+                
+                </center>
+             
+                <hr>
+                <div  class="card-body"> 
+             
+                        {% comment %} Sale la Lista entre corchetes y comas 
+                        <h5>ES LISTA </h5>
+                        {{ lista| safe}}
+                        <hr> {% endcomment %}
+                       
+                        <center><p style= "font-size: 22px";> <b>Reporte de Tratamientos</b> </p></center>
+                     
+                        {{tabla |safe}}
+                    
+                        <!--Es la lista como un diccionario-->
+                        {% comment %} {{resultado}} {% endcomment %}
+                        <!--fin del diccionario-->
+                        <br>
+                        <hr>
+                        <br>
+                        {% comment %} es lista de Cantidades
+                       
+                        <hr>
+                        {{lista_cantidades}}
+                        <br>
+                        es cantidades 
+                        <br>
+                        <hr>
+                        {{cantidades}}
+                        print("Es tipo", "#Cantidad",type(cantidades), "#draw", type(draw), "#grafico", type(g1), type(g2)) {% endcomment %}
+              
+   {% comment %} {{data_cantidades}}
+   <br>
+   <br> {% endcomment %}
 
-
-            <div  class="card-body">
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label>
-                                <b>Rango de fechas:</b></label>
+  
+                    <h3> Gráfico de Tratamientos</h3>
+                        <center style="width: 650px">
+                            <canvas id="myChart" ></canvas>
+                            <script src="chart.js"></script>
+                                <script>
+                                    var indices={{indices|safe}};
+                                    var ctx = document.getElementById('myChart').getContext('2d');
+                                    var chart = new Chart(ctx, {
+                                    type: 'bar', 
+                                    data:{
+                                    datasets: [{
+                                                data: {{li}},
+                                    backgroundColor: ['red','yellow','pink','purple','blue','orange'],
+                                    label: 'Cantidades'}],
+                                    {% comment %} labels: ['R','A','b','c','d']}, {% endcomment %}
+                                    labels: indices},
+                                    options: {responsive: true}
                             
-                            {{ form.date_range }}
-                        </div>
+                                    });
+                                </script>
+                        </center> 
+                        <hr>
+                          <!--PRESENTA UN LISTADO-->
+                        <!--Es la Lista General en una tabla-->
+                          {% comment %} {{data | safe}} 
+                          
+                          {% endcomment %}
+                         <!--Fin del Listado-->
+                  
+                
+
+                    <br>
+                    <div class="card-footer">
+                       
+                        <a href="{{ list_url }}" class="btn btn-success btn-flat">
+                            <i class="fas fa-sync"></i> Actualizar
+                        </a>
                     </div>
                 </div>
-                <hr>
-                
-                </script>
-                <form action="" method="post">
-                    <table class="table table-bordered" id="data">
-                        <thead>
-                        <tr>
-                            <th scope="col">Nro </th>
-                            <th scope="col">Tratamientos</th>
-                            <th scope="col">Agendamiento</th>
-                            {% comment %} <th scope="col">Total</th> {% endcomment %}
-                        </tr>
-                        </thead>
-                        <tbody>
-                            {%if cita_reservadas%}
-                                {%for c in cita_reservadas%}
-
-                                    <tr>
-                                        <td >{{forloop.counter}}</td>
-                                    
-                        
-                                
-                                        <td >{{c.tratamiento_solicitado}}</td>
-                                        <td >{{c.fecha}}</td>
-                                        </tr>
-                                {% endfor %}
-                            {% endif %}
-                        </tbody>
-                    </table>
-                </form>
-
-                <br>
-                <div class="card-footer">
-                    <right>
-                    <a href="{{ list_url }}" class="btn btn-success btn-flat">
-                        <i class="fas fa-sync"></i> Actualizar
-                    </a>
-                </div>
             </div>
-        </div>
+        {%endblock%}   
     </body>     
-
-
    
 </html>
