--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -399,6 +399,9 @@
                                                     <li><a class="dropdown-item" href="/cobros/listar_cobros_pendientes/"> 
                                                       <font color="black">  • Cobros pendientes</font></a>
                                                     </li>
+                                                    <li><a class="dropdown-item" href="/cobros/registrar_gasto/"> 
+                                                      <font color="black">  • Gastos</font></a>
+                                                    </li>
                                                   </ul>
                                               </li>
                                             {%endif%}
