--- a/Proyecto2/SmileSoft/gestion_cobros/templates/gastos/registrar_gasto.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/gastos/registrar_gasto.html
@@ -10,8 +10,8 @@
         <center>
             <div style=" color:  rgb(0, 162, 255);">
                 <h2>
-                    <i class="bi bi-file-text"></i>
-                    <b>Ingrese los datos</b>
+                    <!-- <i class="bi bi-file-text"></i> -->
+                    <b>Ingrese los datos de la cabecera</b>
                 </h2>
             </div>
         </center>
@@ -19,114 +19,46 @@
             <form action="" method="POST">
                 {%csrf_token%}
                 <div style="margin: 20px;">
-                    <div>
+                    <center>
                         <br>
-                        <div class="form-group" style="width: 30%; float: left">  <!--style="float: left; width: 80%;"> -->
-                            <label><b> Fecha: </b>  </label>
-                            {{fecha_actual}}
-                        </div>
-                        <div class="form-group" style="width: 40%; float: right">  <!--style="float: left; width: 80%;"> -->
-                            <label for="{{form.condicion_venta.name}}"><b>{{form.condicion_venta.label}}</b>  </label>
-                            {{form.condicion_venta}}
-                        </div>
+                    <div class="form-group" style="width: 70%;">  <!--style="float: left; width: 80%;"> -->
+                        <label for="{{form.fecha.name}}" style="float: left;"><b>{{form.fecha.label}}</b>  </label>
+                        {{form.fecha}}
                     </div>
                     <br>
-                    <br>
-                    <br>
-                    <div>
-                        <div class="form-group" style="float: left; width: 30%;">  <!--style="float: left; width: 80%;"> -->
-                            <label for="{{form.numero_comprobante.name}}"><b>{{form.numero_comprobante.label}}</b>  </label>
-                            {{form.numero_comprobante}}
-                        </div>
-                        <div class="form-group" style="float: right; width: 70%;">
-                            <label for="{{form.razon_social.name}}"><b>{{form.razon_social.label}}</b> </label>
-                            {{form.razon_social}}
-                        </div>
+                    <div class="form-group" style="width: 70%;">  <!--style="float: left; width: 80%;"> -->
+                        <label for="{{form.timbrado.name}}" style="float: left;"><b>{{form.timbrado.label}}</b>  </label>
+                        {{form.timbrado}}
                     </div>
                     <br>
-                    <br>
-                    <br>
-                    <div>
-                        <div class="form-group" style="float: left; width: 75%;">
-                            <label for="{{form.direccion.name}}"><b>{{form.direccion.label}}</b></label>
-                            {{form.direccion}}
-                        </div>
-                        <div class="form-group" style="float: right; width: 25%;">
-                            <label for="{{form.telefono.name}}"><b>{{form.telefono.label}}</b></label>
-                            {{form.telefono}}
-                        </div>
+                    <div class="form-group" style="width: 70%;">  <!--style="float: left; width: 80%;"> -->
+                        <label for="{{form.numero_comprobante.name}}" style="float: left;"><b>{{form.numero_comprobante.label}}</b> </label>
+                        {{form.numero_comprobante}}
                     </div>
-                    
                     <br>
+                    <div class="form-group" style="width: 70%;">
+                        <label for="{{form.razon_social.name}}" style="float: left;"><b>{{form.razon_social.label}}</b> </label>
+                        {{form.razon_social}}
+                    </div>
                     <br>
+                    <div class="form-group" style="width: 70%;">  <!--style="float: left; width: 80%;"> -->
+                        <label for="{{form.condicion_venta.name}}" style="float: left;"><b>{{form.condicion_venta.label}}</b>  </label>
+                        {{form.condicion_venta}}
+                    </div>
+                    </center>
+                    </div>
                     <br>
-                    
                 </div>
-                <h4 style="color: white; background-color: lightskyblue;" align="center">
-                    Detalles de Facturación
-                </h4>
-                <div style="margin: 20px;">
-                    <table class="table table-striped table-hover">
-                        <thead>
-                            <tr>
-                                <th>Cantidad</th>
-                                <th>Descripción</th>
-                                <th>Precio unitario</th>
-                                <!-- <th>Exentas</th>
-                                <th>IVA 5%</th>
-                                <th>IVA 10%</th> -->
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- {%if tratamientos%} -->
-                                <!-- {%for c in tratamientos%} -->
-                                <tr>
-                                    <td>1</td>
-                                    <td>{{c.tratamiento.nombre_tratamiento}}</td>
-                                    <td>{{c.tratamiento.precio}}</td>
-                                    <!-- <td>{{form.numero_documento}}</td>
-                                    <td>{{form.numero_documento}}</td>
-                                    <td>{{form.numero_documento}}</td> -->
-                                </tr>
-                                <!-- {%endfor%} -->
-                                <!-- <tr>
-                                    <td><b>SubTotales</b></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td><b>{{monto_total}} Gs</b></td>
-                                    <td><b>{{monto_total}} Gs</b></td>
-                                    <td><b>{{monto_total}} Gs</b></td>
-                                </tr> -->
-                                <tr>
-                                    <td><b>Totales</b></td>
-                                    <td></td>
-                                    <!-- <td></td> -->
-                                    <!-- <td></td> -->
-                                    <!-- <td></td> -->
-                                    <td><b>{{form.monto_total}} Gs</b></td>
-                                </tr>
-                            <!-- {%else%} -->
-                                <!-- <h5>
-                                    No hay valores que mostrar
-                                </h5> -->
-                            <!-- {%endif%} -->
-                        </tbody>
-                    </table>
-                </div>
-                <div align="center">
-                    <!-- <a type="submit" href="/cobros/generar_factura/" target="_blank" class="btn btn-outline-primary">
-                        <i class="bi bi-file-pdf"></i>
-                        Generar factura
-                    </a> -->
-                    <button type="submit" target="_blank" class="btn btn-outline-primary">
+                <div align="center" class="d-grid gap-2 col-4 mx-auto">
+                    <button type="submit" target="_blank" class="btn btn-primary">
                         <i class="bi bi-box-arrow-in-down"></i>
-                        Guardar
+                        Guardar y agregar detalles
                     </button>
                     &nbsp;&nbsp;
-                    <a onclick="history.back()" class="btn btn-outline-danger">
+                    <!-- <a onclick="history.back()" class="btn btn-outline-danger">
                         <i class="bi bi-back"></i>
                         Atrás
-                    </a>
+                    </a> -->
                 </div>
                 
             </form>
